objects/BMCServiceDesk__BMC_Patch__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Service_Pack_In_Effect__c</fullName>
        <label>Service Pack In Effect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Severity_Rating__c</fullName>
        <label>Severity Rating</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>